# dimos

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  log.txt  pr_responses.yaml  pyproject.toml
.cursor/rules/: karpathy-style.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  autofix.yaml  autofix.yml  ci.yml  code-cleanup.yml  docker.yml  fast-test.yml  fork-fast-ci.yml  macos.yml  tests.yml
dimos/: api.py  conftest.py  constants.py  test_no_sections.py
dimos/agents/: agent.py  agent_test_runner.py  annotation.py  cerebras_agent.py  skill_result.py  system_prompt.py  test_skill_result.py  vlm_agent.py
dimos/agents2/: agent.py  test_mock_agent.py
dimos/control/: components.py  coordinator.py  hardware_interface.py  tick_loop.py
dimos/core/: arduino_module.py  blueprints.py  core.py  docker_module.py  global_config.py  module.py  module_coordinator.py  native_module.py  rpc_client.py  run_registry.py  stream.py  test_blueprints.py  test_core.py  test_mcp_integration.py  test_native_module.py  test_stream.py  testing.py  (+3 more)
dimos/navigation/nav_stack/modules/terrain_map_ext/cpp/: CMakeLists.txt  flake.nix  main.cpp
docs/: README.md  architecture.md  docs.json  introduction.mdx  learning_pipeline_plan.md  quickstart.mdx  requirements.mdx  项目概览.md
installer/: requirements.txt
scripts/: install-splat-apple.sh  install.sh  run_memory_browser.py
tests/: run.py  run_standalone.py  test_object_tracking_module.py  test_zed_module.py
(+823 files in other folders)
